--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.3",
+    "@angular/animations": "^9.0.6",
+    "@angular/cdk": "^9.1.2",
     "@angular/common": "~9.0.3",
     "@angular/compiler": "~9.0.3",
     "@angular/core": "~9.0.3",
     "@angular/forms": "~9.0.3",
     "@angular/localize": "^9.0.5",
+    "@angular/material": "^9.1.2",
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "bootstrap": "^4.4.1",
+    "bootstrap-icons": "^1.0.0-alpha2",
     "firebase": "^7.9.3",
+    "ngx-toastr": "^12.0.0",
+    "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.10.0",
